--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "This package currently provides one function that takes in an arr
 authors = ["Karl Hedberg"]
 keywords = ["array", "utility", "unzip", "tuple", "lightweight"]
 catagories = ["data-structures", "rust-patterns"]
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
