--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ keywords = ["array", "utility", "unzip", "tuple", "lightweight"]
 catagories = ["data-structures", "rust-patterns"]
 readme = "README.md"
 homepage = "https://github.com/kallehed/unzip-array-of-tuple"
+repository = "https://github.com/kallehed/unzip-array-of-tuple"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
